<resources>
    <string name="app_name">Mosharkaty</string>
    <string name="home_tab">الرئيسية</string>
    <string name="tab_text_1">بروفايلي</string>
    <string name="tab_text_2">ايفنتات</string>
    <string name="tab_text_3">مشاركة جديدة</string>
    <string name="tab_text_4">تقييمي</string>
    <string name="admin_tab_text_1">اضافات</string>
    <string name="admin_tab_text_2">اضافة ايفنت</string>
    <string name="admin_tab_text_3">مشاركات متسجلة</string>
    <string name="admin_tab_text_4">تسجيل مشاركات</string>
    <string name="title">ايفنت</string>
    <string name="log_out_btn_text">خروج</string>
    <string name="save_changes_btn_text">حفظ التعديلات</string>
    <string name="change_name">تغيير الاسم</string>
    <string name="far3">الفرع</string>
    <string name="name">الاسم</string>
    <string name="next_events_label">الايفنتات القادمة هذا الشهر :</string>
    <string name="add_event_btn_txt">اضافة ايفنت جديد</string>
    <string name="choose_date_hint">اختار التاريخ</string>
    <string name="dummy_volunteer">متطوع فريق عمل</string>
    <string name="change_code">تغيير الكود</string>
    <string name="dummy_code">00000</string>
    <string name="login_btnTxt">دخول</string>
    <string name="create_new_account_btnTxt">إنشاء حساب</string>
    <string name="dummy_far3">المهندسين</string>
    <string name="dummy_number">-</string>
    <string name="password_hint">try something simple</string>
    <string name="message_write_header">اجعل رسالتك بناءة :)</string>
    <string name="saraha_description">دي مساحة فاضية ليك تعبر فيها عن رايك - اعتراضك - شكوي او اي حاجة نفسك تقولها من غير ما تقول اسمك .. او لو عايز تقوله برضو ^^</string>
    <string name="login_tip">لو اول مرة ليك .. اكتب ايميلك و password من اختيارك \nو اعمل account جديد</string>
    <string name="technical1">التواصل</string>
    <string name="technical2">الالتزام</string>
    <string name="technical3">problem\nsolving</string>
    <string name="technical4">الجودة</string>
    <string name="technical5">creativity</string>
    <string name="point_of_comparison">البند</string>
    <string name="totalpoints">المجموع</string>
    <string name="personal1">التعاون</string>
    <string name="personal2">الاختلاط</string>
    <string name="personal3">احترام\nالتبعية</string>
    <string name="personal4">التواضع</string>
    <string name="personal5">الانتماء</string>
    <string name="personal6">الاعتذار</string>
    <string name="personal">البنود الاخلاقية و الشخصية : </string>
    <string name="technical">البنود الفنية (تتعلق باداء المتطوع لدوره) : </string>
    <string name="dummy_num2">+2</string>
    <string name="total_technical">المجموع الفني : </string>
    <string name="total_personal">المجموع الاخلاقي : </string>
    <string name="bonus_head">تقييم الهيد المباشر و الادارة :</string>
    <string name="extraComment">تعليق علي التقييم</string>
    <string name="name_hint">اكتب اسمك ثلاثي بالعربي</string>
    <string name="code">الكود</string>
    <string name="code_hint">اكتب الكود اللي الفرع عامله ليك</string>
    <string name="password">كلمة السر</string>
    <string name="email_hint">username@gmail.com</string>
    <string name="e_mail">البريد الالكتروني</string>
    <string name="reset">نسيت كلمة السر؟</string>
    <string name="branch">الفرع</string>
    <string name="not_available_error">Feature Not Available Yet</string>
    <string name="dummy_history">10,11,12,13</string>
    <string name="welcome_statement">اهلا بيك في Mosharkaty</string>
    <string name="dummy_date">22/7</string>
    <string name="dummy_time">Sun Aug 02 19:15:47 GMT+02:00 2020</string>
    <string name="sign_btn_txt">امضاء التقييم</string>
    <string name="no_events_error_message">لا يوجد ايفنتات قادمة\n متبقية هذا الشهر</string>
    <string name="new_mosharka_btn_txt">سجل مشاركة جديدة</string>
    <string name="total">الاجمالي</string>
    <string name="close_btn_txt">تقفيل اليوم</string>
    <string name="day_already_closed">اليوم مقفول بالفعل</string>
    <string name="dummy_day">5</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dummy_percent">0%</string>
    <string name="dummy_float">6.5</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Mosharkaty is available. Please update to version </string>
    <string name="youAreNotUpdatedMessage1">  now</string>
    <string name="update">Update</string>
    <string name="send_daily_update">ارسال المتابعة اليومية</string>
    <string name="coming">جاي</string>
    <string name="maybe">احتمال</string>
    <string name="not_coming">معتذر</string>
    <string name="title_activity_admin_meetings">AdminMeetings</string>
    <string name="meeting_tab_text_1">اضافة اجتماع</string>
    <string name="meeting_tab_text_2">عرض اجتماعات</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chooseExcelForm">اختار فورم الاكسيل اللي عايزه</string>
    <string name="dailyReport">متابعة ادارة المتطوعين اليومية</string>
    <string name="motab3asheet">شيت المتابعة</string>
    <string name="teen_tab_text_1">اضافة اشبال</string>
    <string name="nasheet_tab_text_1">اضافة نشيط</string>
    <string name="nasheet_tab_text_2">عرض المشاركات</string>
    <string name="nasheet_tab_text_3">تقرير</string>
    <string name="fari2_filter_checkbox_text">فريق فقط</string>
    <string name="refresh_report">refresh report</string>
    <string name="dummy_course"><![CDATA[Basic Excel & Google Sheets]]></string>
    <string name="enroll">اشتراك</string>
    <string name="dummy_link"><![CDATA[https://www.youtube.com/watch?v=IuPxQP0lg78&ab_channel=MostafaElshaer]]></string>
    <string name="dummy_instructor">ا/محمد عادل</string>
    <string name="dummy_link2">https://youtu.be/AKPaaB3baEg</string>
    <string name="courses_btn_text">استكشف المزيد من\n كورسات الفرز</string>
    <string name="nasheetColumn">عمود النشيط</string>
    <string name="nasheetStats">مشاركات كل النشيط</string>
    <string name="teenColumn">عمود الاشبال</string>
    <string name="teenStats">مشاركات كل الاشبال</string>
    <string name="events_reports_tab_text_1">اضافة حدث</string>
</resources>