<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/contRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="continue reading"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lighterBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:id="@+id/technicalTable"
        android:layout_width="0dp"
        android:stretchColumns="*"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/lighterBlue"
        android:divider="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TableRow>

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/technical5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/technical4"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/technical3"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/technical2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/technical1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/creativity"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quality"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem_solving"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commitment"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/communication"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/personalTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:stretchColumns="*"
        android:background="@color/lighterBlue"
        android:divider="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <TableRow>

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal6"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal5"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal4"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal3"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/personal1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/execues"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loyalty"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humble"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/respect"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ekhtlat"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cooperation"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/dummy_num2"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/technical"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/personal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bonus_head"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/bonusHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_number"
        android:textColor="@color/ourBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="تعليق علي التقييم : "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/extraComment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/extraComment"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/contRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@color/ourBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@color/ourBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="الاجمالي"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technicalTable" />

    <TextView
        android:id="@+id/totalTechTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_number"
        android:textColor="@color/ourBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textView24" />
    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="الاجمالي"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalTable" />

    <TextView
        android:id="@+id/totalPersonalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_number"
        android:textColor="@color/ourBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takyeemVolName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_volunteer"
        android:textColor="@color/ourBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />
</androidx.constraintlayout.widget.ConstraintLayout>